syntax = "proto3";

package user;

option go_package = "zhadan.user.v1;userv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ADMIN = 2;
}

service UserService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  string name = 1; // Name of the user to create
  string email = 2; // Email of the user to create
  string password = 3; // Password of the user to create
  string password_confirm = 4; // Password confirmation
  Role role = 5; // Role of the user to create
}

message CreateResponse {
  string id = 1; // UUID of the registered user
}

message GetRequest {
  string  id = 1; // UUID of the user to get
}

message GetResponse {
  string id = 1; // UUID of the user
  string name = 2; // Name of the user
  string email = 3; // Email of the user
  Role role = 4 ; // Roles of the user
  google.protobuf.Timestamp created_at = 5; // Timestamp of user creating
  google.protobuf.Timestamp updated_at = 6; // Timestamp of user updating
}

message UpdateRequest {
  string id = 1; // User UUID to update
  google.protobuf.StringValue name = 2; // Name of the user to update (optional)
  google.protobuf.StringValue email = 3; // Email of the user to update (optional)
}

message DeleteRequest {
  string id = 1; // User UUID to delete
}
